# grpc-spike

./: .gitignore  buf  buf.gen.yaml  pyproject.toml  readme.md
.devcontainer/: Dockerfile  devcontainer.json
cpp-ws/: CMakeLists.txt  readme.md
cpp-ws/src/: main.cpp  talos_service.cpp  talos_service.h
proto/: buf.yaml  icd.md  icd.proto
proto/icd/v1/: icd.proto
python-ws/: main.py  pyproject.toml  readme.md
python-ws/src/: __init__.py  icd_pb2.py  icd_pb2.pyi  icd_pb2_grpc.py
python-ws/src/proto/: icd_pb2.py  icd_pb2.pyi  icd_pb2_grpc.py
python-ws/src/proto/icd/v1/: icd_pb2.py  icd_pb2.pyi  icd_pb2_grpc.py
